--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -5,30 +5,28 @@ output:
     toc: false
 ---
 
-[old experiments](oldanalysis.html)
+## Apply flashr for the examples in FLASH paper
 
-## Simulation studies
-
-### Orthogonal CV
-
-Click on this [orthogonal CV](miss_position.html) to see my example.
-
-### Apply flashr for the examples in FLASH paper
-
-#### simulations
+### simulations
 
 Click here to check the [RMSE for the rank one example in the paper](MSErank1sim.html)
 
 Click here to check the [RMSE for the rank three example in the paper](simulation3.html) and [RRMSE](MSErank3sim.html)
 
-#### GTEx Z-score
+### GTEx Z-score
 
 Here is a example to run `flashr` on RCC [RCC template](GTEXzscoreTemplate.html)
 
 compare with PCA result[compare with SVD](PCAresult.html)
 
-#### missing data imputation
+### missing data imputation
 
 click here to check the template for [missing data imputation with OCV](templateforOCV.html) and [CV template](CVtemplate.html)
 
+## Other documents
 
+[old experiments](oldanalysis.html)
+
+### Orthogonal CV
+
+Click on this [orthogonal CV](miss_position.html) to see my example.
